	- do macro expansion before %if processing
	- dep ordering returns w/ an error as soon as a prereq loop is found
	- autoreqprov flag was being ignored during builds
	- add autoreq: and autoprov:
	- missed a few unlink() when scripts failed
	- freePrefixes wasn't initialized in runScript()
	- fix typo in %triggerpostun generation
	- include icons in source packages

2.4.108 -> 2.4.109:
        - remove icons with --rmsource
        - do dependecy generation on -bl
        - check files on all packages on -bl
	- integrate Jeff Johnson's memleak patches
	- added OSF1 autodep scripts

2.4.107 -> 2.4.108:
        - make --clean work with no %setup
	- fixed FSSIZES problem introduced in 2.4.107
	- fixed search for find-requires.sh
	- improved solaris autodeps scripts
	- automated (somewhat) the -static flag

2.4.106 -> 2.4.107:
	- --nomd5 wasn't handled properly
	- updated configure.in find-req and find-prov checks (Tim Mooney)
        - make --rmsource actually work
	- run postun triggers

2.4.105 -> 2.4.106:
	- build: only check for non-printables in first 128 chars
	- added %triggerpostun
	- linux.req generates deps for shared libs
	- added a CC=@CC@ to popt/Makefile.in
	- handle signed return types from poptGetNextOpt() properly

2.4.104 -> 2.4.105:
	- added langpatt: to rpmrc, and mark files with matches
	- added some C++ cruft to rpmlib.h
	- added find-requires and find-provides for hpux (Tim Mooney)
	- respect LINGUAS when install package files
	- added trigger support to build code
	- got rid of annoying mwftw() type warning
	- fixed many command line options which got broke by changes
	  for non-gcc compilers
	- added trigger support in install code
	- added doc/triggers
	- strntoul() in lib/cpio.c was returning a pointer to freed
	  memory
	- headerAppend() was doing a bad memcpy()

2.4.103 -> 2.4.104:
	- fixed popt/Makefile.in to use CPP from configure
	- use tmppath from rpmrc to for ftp'd files (rather then /var/tmp)