@@ -92,12 +92,12 @@ int parseDescription(Spec spec)
     
     sb = newStringBuf();
 
-    if (readLine(spec, STRIP_TRAILINGSPACE) > 0) {
+    if (readLine(spec, STRIP_TRAILINGSPACE | STRIP_COMMENTS) > 0) {
 	nextPart = PART_NONE;
     } else {
 	while (! (nextPart = isPart(spec->line))) {
 	    appendLineStringBuf(sb, spec->line);
-	    if (readLine(spec, STRIP_TRAILINGSPACE) > 0) {
+	    if (readLine(spec, STRIP_TRAILINGSPACE | STRIP_COMMENTS) > 0) {
 		nextPart = PART_NONE;
 		break;
 	    }
